# libmicrodns

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  NEWS  README.md  announce.c  bootstrap  compat.c  compat.h  configure.ac  libmdns.def  main.c  mdns.c  mdns.h  meson.build  meson_options.txt  microdns.h  microdns.h.in  rr.c  rr.h  utils.h
.github/workflows/: build.yml
compat/: compat.c  compat.h  inet.c  meson.build  poll.c
doc/: Doxyfile.in
examples/: announce.c  host-lookup.c  main.c  meson.build
include/: mdns.h  meson.build  utils.h
include/microdns/: microdns.h  rr.h
src/: libmicrodns.def  mdns.c  meson.build  microdns.h  microdns.h.in  microdns.pc.in  rr.c  rr.h  utils.h  version.h.in
tests/: fuzz.c  meson.build  unittests.c
